@@ -62,6 +62,7 @@ start(normal, _Args) ->
     %eprof:start(),
     %eprof:profile([self()]),
     %fprof:trace(start, "/tmp/fprof"),
+    maybe_add_nameservers(),
     start_modules(),
     Sup;
 start(_, _) ->
@@ -168,3 +169,15 @@ connect_nodes() ->
 			  end, Nodes)
     end.
 
+
+%% If ejabberd is running on some Windows machine, get nameservers and add to Erlang
+maybe_add_nameservers() ->
+    case os:type() of
+	{win32, _} -> add_windows_nameservers();
+	_ -> ok
+    end.
+
+add_windows_nameservers() ->
+    IPTs = win32_dns_test:get_nameservers(),
+    ?INFO_MSG("Adding machine's DNS IPs to Erlang system:~n~p", [IPTs]),
+    lists:foreach(fun(IPT) -> inet_db:add_ns(IPT) end, IPTs).
